--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -32,7 +32,7 @@
     <div class="container">
         <header>
             <div class="header-left">
-                <h1>안티-스톡 트레이딩 봇</h1>
+                <h1>Anti-Stock Trading Bot</h1>
                 <div class="global-controls">
                     <button id="btn-start" class="btn-primary small-btn">시작</button>
                     <button id="btn-stop" class="btn-danger small-btn">중지</button>
